<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_32"
        tools:context=".activity.MainActivity">

        <TextView
            android:id="@+id/tv_wellcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_64"
            android:fontFamily="@font/atari_pixel"
            android:text="@string/wellcome"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_wellcome"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_8"
            android:fontFamily="@font/atari_pixel"
            android:text="@string/s_a_m_v_u"
            android:textSize="@dimen/textSize28" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/btn_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:fontFamily="@font/atari_pixel"
                android:text="@string/play"
                android:textSize="@dimen/textSize28" />

            <TextView
                android:id="@+id/btn_high_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:fontFamily="@font/atari_pixel"
                android:text="@string/high_score"
                android:textSize="@dimen/textSize28" />

            <TextView
                android:id="@+id/btn_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:fontFamily="@font/atari_pixel"
                android:text="@string/help"
                android:textSize="@dimen/textSize28" />

            <TextView
                android:id="@+id/btn_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:fontFamily="@font/atari_pixel"
                android:text="@string/exit"
                android:textSize="@dimen/textSize28" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/transcolor"
            android:src="@drawable/ic_sound_on"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/btn_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:background="@color/transcolor"
            android:src="@drawable/ic_setting"
            tools:ignore="ContentDescription" />

    </RelativeLayout>
</layout>