<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_32"
        tools:context=".activity.MainActivity">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_32"
            android:fontFamily="@font/atari_pixel"
            android:text="@string/high_score"
            android:textSize="@dimen/textSize28" />

        <LinearLayout
            android:id="@+id/view_high_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_high_score_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/atari_pixel"
                android:text="@string/s_a_m_v_u"
                android:textSize="@dimen/textSize28" />

            <TextView
                android:id="@+id/tv_high_socre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_32"
                android:fontFamily="@font/atari_pixel"
                android:text="55"
                android:textSize="@dimen/textSize96" />
        </LinearLayout>

        <TextView
            android:id="@+id/empty_high_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/atari_pixel"
            android:gravity="center"
            android:text="@string/highscore_empty"
            android:textSize="@dimen/textSize28" />

        <ImageView
            android:id="@+id/btn_high_score_exit"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_64"
            android:src="@drawable/icon_fingure" />

    </RelativeLayout>
</layout>